# moll-fedresurs

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  constants.py  depends.py  main.py  run.py
src/services/: bitrix.py  fedresurs.py  matching.py  orchestrator.py
