[project]
name = "moll-fedresurs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
]
